Added RemovePubKey command support
